--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -26,3 +26,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.primary {
+  color: #405169;
+}
+.secondary {
+  color: #bfae96;
+}
